* Fixed the action button visibility. * Fixed the container length. * New version.

--- a/assets/css/buddyforms-geo-my-wp.css
+++ b/assets/css/buddyforms-geo-my-wp.css
@@ -1,38 +1,38 @@
-.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-field .spinner,
-.the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-field .spinner {
-    background: url('/wp-admin/images/wpspin_light.gif') no-repeat;
-    background-size: 16px 16px;
-    display: none;
-    float: right;
-    opacity: .7;
-    filter: alpha(opacity=70);
-    width: 16px;
-    height: 16px;
-    margin: 5px 5px 0;
-}
-
 .postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-field,
 .the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-field {
     position: relative;
     display: inline;
     min-height: 1px;
     float: left;
-    width: 85%;
+    width: calc(100% - 90px);;
     box-sizing: border-box;
 }
 
 .postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-controls,
 .the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-controls {
     float: right;
-    width: 15%;
+    width: 90px;
     box-sizing: border-box;
     position: relative;
     display: inline-flex;
+    overflow: hidden;
 }
 
 .postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-controls > p > a,
 .the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-controls > p > a {
     cursor: pointer;
+}
+
+.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-controls [class*=" gmw-icon-"]:before, .postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-controls [class^=gmw-icon-]:before,
+.the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-controls [class*=" gmw-icon-"]:before, .the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-controls [class^=gmw-icon-]:before {
+    width: 0.5rem;
+}
+
+.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-controls > p > a > span.dashicons,
+.the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-controls > p > a > span.dashicons {
+    width: 10px;
+    height: 10px;
+    font-size: 16px;
 }
 
 .postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-field input[type=text].bf-address-autocomplete,
@@ -44,8 +44,16 @@
     height: 50px;
 }
 
+.the_buddyforms_form p.bfgmw-action a {
+    display: none;
+}
+
 .the_buddyforms_form p.bfgmw-action {
     padding: 15px 5px;
+}
+
+.bf-geo-address-fields .container-for-geo-address-controls .bfgmw-action .geo-address-field-delete:nth-child(2) {
+    display: none;
 }
 
 .buddyforms-metabox p.gmw-lf-field.message,
